# outlook-rust

./: README.md
.github/: FUNDING.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/src/: main.rs
